# SearhRnPy-Contracheque

./: README.md  app.py  contracheques_detalhados.xlsx  log_falhas.txt  main.py  new.py  pyproject.toml  test.py
